--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build --base /CreativeCoding",
+    "build": "slidev build --base /CreativeCoding/",
     "dev": "slidev --open",
     "export": "slidev export"
   },
