--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "slidev build --base /CreativeCoding/",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@slidev/cli": "^52.11.3",
@@ -14,6 +15,7 @@
     "vue": "^3.5.26"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "prettier": "^3.8.1",
     "prettier-plugin-slidev": "^1.0.5"
   }
